# ghostty-web

./: .gitignore  README.md  run.sh
backend/: Cargo.toml
backend/src/: main.rs  pty.rs  ws.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Terminal.tsx
frontend/src/styles/: terminal.css
